# viewfinder

./: .gitignore  README.md  pubspec.yaml
.github/: dependabot.yaml
.github/workflows/: build-test.yaml  build.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/viewfinder/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/messages/: camera.pb.dart  camera.pbenum.dart  camera.pbjson.dart  camera.pbserver.dart  gstreamer.pb.dart  gstreamer.pbenum.dart  gstreamer.pbjson.dart  gstreamer.pbserver.dart  serial.pb.dart  serial.pbenum.dart  serial.pbjson.dart  serial.pbserver.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner/: AppDelegate.swift  DebugProfile.entitlements  Info.plist  MainFlutterWindow.swift  Release.entitlements
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
messages/: camera.proto  gstreamer.proto  serial.proto
native/hub/: Cargo.toml
native/hub/src/: gst_api.rs  lib.rs  serial.rs  with_request.rs
native/hub/src/messages/: camera.rs  gstreamer.rs  mod.rs  serial.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
