[package]
# Do not change the name of this crate.
name = "hub"
version = "0.1.0"
edition = "2021"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
rinf = "5.1"
tokio_with_wasm = "0.3"
prost = "0.12"


################
glib = { package = "glib", version = "0.18" }
gst = { package = "gstreamer", version = "0.21" }
gst_app = { package = "gstreamer-app", version = "0.21" }
gst_vid = { package = "gstreamer-video", version = "0.21" }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
